# banyan-ingest

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  example_marker.py  example_nemoparse.py  example_pm.py  example_pptx.py  pyproject.toml  pytest.ini
docs/: CODEBASE_INDEX.md  PR-3-Details.md  ROTATION_FEATURE_SUMMARY.md  TESTING_GUIDELINES.md  rotation_api.md
src/: __init__.py
src/banyan_extract/: cli.py
src/banyan_extract/converter/: latex_table_to_csv.py
src/banyan_extract/ocr/: nemotron_ocr.py
src/banyan_extract/output/: __init__.py  marker_output.py  nemoparse_output.py  output.py  papermage_output.py
src/banyan_ingest/: __init__.py
tests/: conftest.py  utils.py
tests/integration/: test_cli_pptx_integration.py  test_dependency_detection_integration.py  test_nemoparse_examples.py  test_nemoparse_output_integration.py  test_nemoparse_processor_integration.py  test_nemoparse_sample_integration.py  test_nemoparse_workflow.py  test_pptx_backends_integration.py  test_pptx_sample_integration.py  test_rotation_detection_comprehensive.py  test_rotation_detection_integration.py  test_rotation_detection_pdf_integration.py  test_simple_real_api.py
tests/unit/: test_cli_pptx_backend.py  test_contour_detection.py  test_dependency_utils.py  test_image_rotation.py  test_marker_output.py  test_nemoparse_output.py  test_nemoparse_processor.py  test_nemoparse_retry_logic.py  test_papermage_output.py  test_pptx_lazy_simple.py  test_pptx_output.py  test_pptx_processor_defaults.py  test_rotation_cli_args.py  test_rotation_detection.py  test_rotation_integration.py
(+29 files in other folders)
